// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bug all mixed up0 1`] = `
<span>
  true
</span>
`;

exports[`Bug all mixed up1 1`] = `
<span
  key={1}
>
  {"text":"2","urm":"1"}
</span>
`;

exports[`Bug all mixed up2 1`] = `
<span
  key={2}
>
  <a
    href="1"
    target="_blank"
  >
    3
  </a>
</span>
`;

exports[`Bug all mixed up3 1`] = `
<span
  key={3}
>
  1
</span>
`;

exports[`Bug all mixed up4 1`] = `
<span
  key={4}
>
  hello world
</span>
`;

exports[`Bug all mixed up5 1`] = `
<span
  key={5}
>
  1.2
</span>
`;

exports[`Bug array of boolean0 1`] = `
<span>
  true
</span>
`;

exports[`Bug array of boolean1 1`] = `
<span
  key={1}
>
  false
</span>
`;

exports[`Bug array of boolean2 1`] = `
<span
  key={2}
>
  true
</span>
`;

exports[`Bug array of number0 1`] = `
<span>
  1
</span>
`;

exports[`Bug array of number1 1`] = `
<span
  key={1}
>
  2
</span>
`;

exports[`Bug array of number2 1`] = `
<span
  key={2}
>
  3
</span>
`;

exports[`Bug array of number3 1`] = `
<span
  key={3}
>
  4
</span>
`;

exports[`Bug array of string0 1`] = `
<span>
  1
</span>
`;

exports[`Bug array of string1 1`] = `
<span
  key={1}
>
  2
</span>
`;

exports[`Bug array of string2 1`] = `
<span
  key={2}
>
  3
</span>
`;

exports[`Bug array parse some links0 1`] = `
<span>
  <a
    href="1"
    target="_blank"
  >
    1
  </a>
</span>
`;

exports[`Bug array parse some links1 1`] = `
<span
  key={1}
>
  {"text":"2","urm":"1"}
</span>
`;

exports[`Bug array parse some links2 1`] = `
<span
  key={2}
>
  <a
    href="1"
    target="_blank"
  >
    3
  </a>
</span>
`;

exports[`Bug array parse to links0 1`] = `
<span>
  <a
    href="1"
    target="_blank"
  >
    1
  </a>
</span>
`;

exports[`Bug array parse to links1 1`] = `
<span
  key={1}
>
  <a
    href="1"
    target="_blank"
  >
    2
  </a>
</span>
`;

exports[`Bug array parse to links2 1`] = `
<span
  key={2}
>
  <a
    href="1"
    target="_blank"
  >
    3
  </a>
</span>
`;

exports[`Bug boolean0 1`] = `
<span>
  true
</span>
`;

exports[`Bug false parse to link0 1`] = `
<span>
  {"text":"1","urm":"1"}
</span>
`;

exports[`Bug number0 1`] = `
<span>
  1
</span>
`;

exports[`Bug parse to link0 1`] = `
<span>
  <a
    href="1"
    target="_blank"
  >
    1
  </a>
</span>
`;

exports[`Bug string0 1`] = `
<span>
  1
</span>
`;
